[package]
name = "bevy-rapier-sim-time"
version = "0.1.0"
edition = "2021"
license = "MIT"

[profile.dev]
opt-level = 1
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.13.2", features = ["dynamic_linking"] }
bevy-inspector-egui = "0.24.0"
bevy_rapier3d = { version = "0.25.0", features = ["simd-stable", "debug-render-3d"] }
